# eod-ai

./: Dockerfile  README.md  app.py  eod_env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  rl_agent.py  tasks.py  test.py  train.py
server/: app.py
